samples/_failures_safe/1761423909_9127f4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_64754abb.c: In function ‘main’:
./samples/SAFE/__tmp_64754abb.c:158:30: error: expected ‘;’ at end of input
  158 |             a.rows = read_int
      |                              ^
      |                              ;
./samples/SAFE/__tmp_64754abb.c:158:13: error: expected declaration or statement at end of input
  158 |             a.rows = read_int
      |             ^
./samples/SAFE/__tmp_64754abb.c:158:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_64754abb.c:158:13: error: expected declaration or statement at end of input
